# orientdb-c

./: .cproject  .gitignore  .project  ChangeLog  Makefile.am  README.md  bootstrap  configure.ac  index.html  jamroot  params.json  wscript
src/: o_class.c  o_class.h  o_class_internal.h  o_connection.c  o_connection.h  o_connection_internal.h  o_connection_remote.c  o_connection_remote.h  o_database.c  o_database.h  o_database_document.c  o_database_document.h  o_database_document_internal.h  o_database_error_handler.c  o_database_error_handler.h  o_database_errors.h  o_database_internal.h  o_database_operation_context.c  o_database_operation_context.h  o_database_push_listener.c  o_database_push_listener.h  o_database_socket.c  o_database_socket.h  o_document.c  o_document.h  o_document_formatter.c  o_document_formatter.h  o_document_formatter_internal.h  o_document_formatter_standard.c  o_document_formatter_standard.h  o_document_internal.h  o_document_value.c  o_document_value.h  o_engine.c  o_engine.h  o_exception.c  o_exception.h  o_exception_internal.h  o_exception_io.c  o_exception_io.h  (+121 more)
test/: suites.h  test-exceptions.c  test-main.c  test-map.c  test-map.h  test.c  test_commons.c  test_commons.h  test_connection_remote.c  test_exceptions.c  test_map.c  test_map.h  test_o_connection_remote.c  test_o_connection_remote.h  test_o_database.c  test_o_database.h  test_o_database_document.c  test_o_database_document.h  test_o_database_document_metadata.c  test_o_database_document_metadata.h  test_o_database_document_query.c  test_o_database_document_query.h  (+30 more)
(+1 files in other folders)
